issuer/example_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard-insecure
  annotations:
    kubernetes.io/ingress.class: nginx    
    #cert-manager.io/issuer: "letsencrypt-staging"

spec:
  # tls:
  # - hosts:
  #   - superdentist.io
  #   secretName: quickstart-example-tls
  rules:
  - host: superdentist.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
